services/tls/immich/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: immich
  name: immich
  namespace: home
spec:
  rules:
    - host: immich.ocelotspot.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: immich-proxy
              port:
                name: http
  tls:
    - hosts:
        - immich.ocelotspot.com
      secretName: "immich.ocelotspot.com-tls"
